所有项目完成提交----------------------------------------------------

--- a/src/main/resources/templates/designmaterialneed.html
+++ b/src/main/resources/templates/designmaterialneed.html
@@ -32,6 +32,11 @@
         document.getElementById("coverbehidepage").style.display = "none";
         var flag = $("#flag").val();
         var aflag = eval(flag)
+        var customerNo2 = $("#customerNo2").val();
+        if (customerNo2.length > 0) {
+            $("#customerNo").val(customerNo2);
+            $('.selectpicker').selectpicker('refresh');
+        }
         if (aflag == 1) {
             $("#errormessage").show();
             var errormessagediv = document.getElementById("errormessage");
@@ -198,9 +203,9 @@
                     n_currentPage.val(currentPage);
                     inputpage.val(currentPage);
                     $.each(data, function (num) {
-                        tr = $("<tr id='" + data[num].id + "' ondblclick=\"showOrderItemByOrderNo('"+data[num].customerNo+"')\"></tr>");
+                        tr = $("<tr id='" + data[num].id + "' ondblclick=\"showOrderItemByOrderNo('" + data[num].customerNo + "')\"></tr>");
                         tr.append("<td>" + ((num + 1) + ((n_currentPage.val() - 1) * pageSize)) + "</td>");
-                        tr.append("<td>" + isNull(data[num].orderMaker) + "</td>");
+                        tr.append("<td>" + isNull(data[num].orderMakerStr) + "</td>");
                         tr.append("<td>" + isNull(data[num].customerNo) + "</td>");
                         tr.append("<td>" + isNull(data[num].getOrderDateStr) + "</td>");
                         tr.append("<td>" + isNull(data[num].orderArea) + "</td>");
@@ -212,8 +217,12 @@
                             "onclick=\"updateOrderItemByheadId(this,'" + data[num].id + "');\">编辑</a>\n" +
                             "  <a class=\"btn btn-xs btn-primary\"\n" +
                             " onclick=\"deleteOrderItemByheadId('" + data[num].id + "');\">删除</a> " +
-                            " <a class=\"btn btn-xs btn-primary\"\n" +
-                            " onclick=\"transferDataToPDFFile('" + data[num].id + "');\">PDF打印</a>" +
+                            "  <a class=\"btn btn-xs btn-primary\"\n" +
+                            "  onclick=\"importDesigeHeadById('" + data[num].id + "');\">导出</a>\n" +
+                            "                                <a class=\"btn btn-xs btn-primary\"\n" +
+                            "                                   onclick=\"ImportPDFFile('" + data[num].id + "');\">PDF导出</a>\n" +
+                            "                                <a class=\"btn btn-xs btn-primary\"\n" +
+                            "                                   onclick=\"transferDataToPDFFile('" + data[num].id + "');\">PDF预览</a>" +
                             "</td>";
                         tr.append(td);
                         tr.appendTo(tbody);
@@ -296,7 +305,7 @@
         var newstr = str.value;
         if (Trim(newstr) != "") {
             var reg = new RegExp(/^[A-Z]{5}[0-9]{8}[A-Z]{2}[0-9]{2}$/g);
-            if (!reg.test(str.value)) {
+            if (!reg.test(Trim(str.value))) {
                 $("#errormessage").show();
                 var errormessagediv = document.getElementById("errormessage");
                 errormessagediv.innerHTML = "客户单号请检查,示例如:COSUN20190112WW01";
@@ -384,12 +393,12 @@
             "  id=\'deliveryDate\'" +
             "  onClick=\"WdatePicker({dateFmt:'yyyy-MM-dd'})\"/></td>");
 
-        tr.append("<td><input type='text' placeholder='备注选填'></td>")
+        tr.append("<td><input type='text' class=\"form-control\" placeholder='备注选填'></td>")
         tr.append("<td><a id=\"savebutton\"\n" +
             "    href=\"javascript:void(0);\" onclick=\"saveSJHeadDateToMysql(this,0)\">保存</a>" +
             " <a href=\"javascript:void(0);\"\n" +
             "    onclick=\"deleteTRA(this," + len + ",0);\">删除</a></td>");
-        tr.appendTo(tbody);
+        tr.prependTo(tbody);
         $('.selectpicker').selectpicker('refresh');
     }
 
@@ -432,9 +441,69 @@
     }
 
     function showOrderItemByOrderNo(customerNo) {
-        console.log(customerNo)
-        window.location.href = "/design/toHeadProduct?customerNo="+customerNo;
+        window.location.href = "/design/toHeadProduct?customerNo=" + customerNo;
     }
+
+
+    function importDesigeHeadById(id) {
+        console.log(id)
+        $("#mkform01").attr("action", "/design/importDesigeHeadById");
+        $("#headId").val(id);
+        delCookie("downloadstatus");
+        window.parent.document.getElementById('coverbehidepage').style.display = "block";
+        document.forms[0].submit();
+        listenEnd();
+    }
+
+
+    function ImportPDFFile(id) {
+        console.log(id)
+        $("#mkform01").attr("action", "/design/importDesigeHeadPDFById");
+        $("#headId").val(id);
+        delCookie("downloadstatus");
+        window.parent.document.getElementById('coverbehidepage').style.display = "block";
+        document.forms[0].submit();
+        listenEnd();
+    }
+
+    function transferDataToPDFFile(headId) {
+        window.open("/pdfjs/web/viewer.html?file=/design/transferDataToPDFFile?id%3D" + headId);
+    }
+
+    function delCookie(name) {
+        var exp = new Date();
+        exp.setTime(exp.getTime() - 1);
+        var cval = getCookie(name);
+        if (cval != null)
+            document.cookie = name + "=" + cval + ";expires=" + exp.toGMTString() + ";path=/";
+    }
+
+    function listenEnd() {//定时监听
+        var loop = setInterval(function () {
+            var cookievalue = getCookie("downloadstatus");
+            if (cookievalue.trim().length > 0) {
+                clearInterval(loop);//停止定时任务
+                window.parent.document.getElementById('coverbehidepage').style.display = "none";
+            }
+        }, 1000);//单位毫秒  注意：如果导出页面很慢时，建议循环时间段稍长一点
+    }
+
+    function getCookie(cname) {
+        var name = cname + "=";
+        var decodedCookie = decodeURIComponent(document.cookie);
+        var ca = decodedCookie.split(';');
+        for (var i = 0; i < ca.length; i++) {
+            var c = ca[i];
+            while (c.charAt(0) == ' ') {
+                c = c.substring(1);
+            }
+            if (c.indexOf(name) == 0) {
+                return c.substring(name.length, c.length);
+            }
+        }
+        return "";
+    }
+
 
 </script>
 <div>
@@ -459,9 +528,11 @@
 
     <div id='compreAttendRecord'>
         <div id='app'>
-            <form>
+            <form id="mkform01" action="" th:method="post">
+                <input type="hidden" id="headId" name="headId">
                 <input type="hidden" id="flag" th:value="${flag}">
                 <input type="hidden" id="userName" th:value="${userName}">
+                <input type="hidden" id="customerNo2" th:value="${customerNo}">
                 <input type="hidden" id="salorList" th:value="${salorEmpList1}">
                 <input type="hidden" id="maxPage" th:value="${orderHead.maxPage}">
                 <input type="hidden" id="n_currentPage" name="view.currentPage" th:value="${orderHead.currentPage}"/>
@@ -487,7 +558,7 @@
                                     </label>
                                 </td>
 
-                                <td>
+                                <td style="text-align: right">
                                     <label>接单时间：</label>
                                 </td>
                                 <td>
@@ -505,7 +576,7 @@
                                     <select id="orderArea" class="selectpicker show-tick form-control"
                                             data-live-search="true" data-actions-box="true">
 
-                                        <option value="">请选择品名</option>
+                                        <option value="">请选择</option>
                                         <option th:each="c:${orderAreaList}" th:value="${c}"
                                                 th:text="${c}"></option>
                                     </select>
@@ -519,7 +590,7 @@
                                         <select id="salorEmp" multiple class="selectpicker show-tick form-control"
                                                 data-live-search="true" data-actions-box="true"
                                                 data-selected-text-format="count > 2">
-                                            <option th:each="c:${salorEmpList}" th:value="${c.id}"
+                                            <option th:each="c:${salorEmpList}" th:value="${c.empNo}"
                                                     th:text="${c.name}"></option>
                                         </select>
                                     </label>
@@ -536,7 +607,7 @@
                                         <select id="maker" multiple class="selectpicker show-tick form-control"
                                                 data-live-search="true" data-actions-box="true"
                                                 data-selected-text-format="count > 2">
-                                            <option th:each="c:${orderMakerList}" th:value="${c.id}"
+                                            <option th:each="c:${orderMakerList}" th:value="${c.empNo}"
                                                     th:text="${c.name}"></option>
                                         </select>
                                     </label>
@@ -553,18 +624,16 @@
                                 </td>
 
 
-                                <td style="text-align: right">
+                                <td style="text-align: right" colspan="2">
                                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                     <a class="btn btn-primary"
                                        href="javascript:void(0);" onclick="queryOrderHeadByCondition()">查找</a>
                                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                     <a class="btn btn-primary"
                                        href="javascript:void(0);" onclick="addSJHead()">新增</a>
-                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                    <a class="btn btn-primary"
-                                       href="javascript:void(0);" onclick="importSJHead()">导出</a>
+
                                 </td>
-                                <td colspan="3">
+                                <td colspan="2">
                                     <div style="display: none" id="errormessage">
 
                                     </div>
@@ -628,7 +697,7 @@
                         <tr th:ondblclick="showOrderItemByOrderNo([[${order.customerNo}]])">
                             <td align="center"
                                 th:text="${(iterStat.index+1)}+${orderHead.currentPage-1}*${orderHead.pageSize}"></td>
-                            <td align="center" th:text="${order.orderMaker}"></td>
+                            <td align="center" th:text="${order.orderMakerStr}"></td>
                             <td align="center" th:text="${order.customerNo}"></td>
                             <td align="center" th:text="${order.getOrderDateStr}"></td>
                             <td align="center" th:text="${order.orderArea}"></td>
@@ -641,7 +710,11 @@
                                 <a class="btn btn-xs btn-primary"
                                    th:onclick="deleteOrderItemByheadId([[${order.id}]]);">删除</a>
                                 <a class="btn btn-xs btn-primary"
-                                   th:onclick="transferDataToPDFFile([[${order.id}]]);">PDF打印</a>
+                                   th:onclick="importDesigeHeadById([[${order.id}]]);">导出</a>
+                                <a class="btn btn-xs btn-primary"
+                                   th:onclick="ImportPDFFile([[${order.id}]]);">PDF导出</a>
+                                <a class="btn btn-xs btn-primary"
+                                   th:onclick="transferDataToPDFFile([[${order.id}]]);">PDF预览</a>
                             </td>
                         </tr>
                     </div>
