--- a/src/main/resources/templates/mainindex.html
+++ b/src/main/resources/templates/mainindex.html
@@ -92,24 +92,25 @@
             </ul>
         </li>
 
+        <div id="xiangmudiv" style="display: none">
 
+            <li data-popover="false"
+                data-content="Items in this group require a <strong><a href='http://portnine.com/bootstrap-themes/aircraft' target='blank'>premium license</a><strong>."
+                data-placement="right"><a href="#" data-target=".premium-menuforsalora" class="nav-header collapsed"
+                                          data-toggle="collapse"><i class="fa fa-fw fa-fighter-jet"></i> 项目中心<i
+                    class="fa fa-collapse"></i></a></li>
+            <li>
+                <ul class="premium-menuforsalora nav nav-list collapse">
+                    <li><a th:href="@{/project/toProjectOrderPage}" target="targetText"><span
+                            class="fa fa-caret-right"></span>项目订单</a></li>
 
-        <li data-popover="false"
-            data-content="Items in this group require a <strong><a href='http://portnine.com/bootstrap-themes/aircraft' target='blank'>premium license</a><strong>."
-            data-placement="right"><a href="#" data-target=".premium-menuforsalora" class="nav-header collapsed"
-                                      data-toggle="collapse"><i class="fa fa-fw fa-fighter-jet"></i> 项目中心<i
-                class="fa fa-collapse"></i></a></li>
-        <li>
-            <ul class="premium-menuforsalora nav nav-list collapse">
-                <li><a th:href="@{/project/toProjectOrderPage}" target="targetText"><span
-                        class="fa fa-caret-right"></span>项目订单</a></li>
+                    <li>
+                        <a th:href="@{/project/tomainpage}" target="targetText"><span
+                                class="fa fa-caret-right"></span>数据导入</a></li>
+                </ul>
+            </li>
 
-                <li>
-                    <a th:href="@{/project/tomainpage}" target="targetText"><span
-                            class="fa fa-caret-right"></span>数据导入</a></li>
-            </ul>
-        </li>
-
+        </div>
 
 
         <li data-popover="false"
@@ -196,7 +197,7 @@
 
         </div>
 
-        <div id="renshidiv" >
+        <div id="renshidiv">
             <li data-popover="false"
                 data-content="Items in this group require a <strong><a href='http://portnine.com/bootstrap-themes/aircraft' target='blank'>premium license</a><strong>."
                 rel="popover" data-placement="right"><a href="#" data-target=".premium-menuforfilea"
@@ -933,6 +934,10 @@
         }
         if (type.includes("2")) {
             $("#renshidiv").show()
+        }
+
+        if (type.includes("3")) {
+            $("#xiangmudiv").show()
         }
         var uls = $('.sidebar-nav > ul > *').clone();
         uls.addClass('visible-xs');
